--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,7 +7,7 @@ spring:
   application:
     name: my-project
   mail:
-    password: wsbsmile287391
+    password:
     default-encoding: utf-8
     host: smtp.163.com
     port: 25
