--- a/pom.xml
+++ b/pom.xml
@@ -88,6 +88,18 @@
             <version>3.3.49.ALL</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.webjars</groupId>
+            <artifactId>bootstrap</artifactId>
+            <version>3.3.5</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.webjars</groupId>
+            <artifactId>jquery</artifactId>
+            <version>3.1.1</version>
+        </dependency>
+
         <!--<dependency>用开源自定义的ui-->
         <!--<groupId>io.springfox</groupId>-->
         <!--<artifactId>springfox-swagger-ui</artifactId>-->
