--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,7 +3,7 @@ spring:
     username: root
     password: root
     driver-class-name: com.mysql.jdbc.Driver
-    url: jdbc:mysql://127.0.0.1:3306/myproject?useUnicode=true&amp;characterEncoding=utf-8&amp;useSSL=false
+    url: jdbc:mysql://127.0.0.1:3306/myproject?useSSL=false
   application:
     name: my-project
   mail:
